# hertopia-musica

./: 99-hertopia-ignore.rules  README.md  analyze_midi.py  create_test_midi.py  device_manager.py  generate_test_midi.py  grid.json  input_bridge.py  input_handler.py  inspect_evdev.py  inspect_windows.py  launcher.sh  launcher_isolate.sh  mappings.py  palette.json  palette_updated.json  player.py  pyproject.toml  run_music.py  split_midi.py
hertopia_drawing/: analyze_scale.py  auto_calibrate.py  calibrate_grid.py  calibrate_overlay.py  draw.py  extract_colors.py  find_mouse.py  grid.json  pixelize_image.py  record_palette.py
musics/: debug_test.mid  test.mid  test_all_keys.mid
typings/evdev/: __init__.pyi
typings/mido/: __init__.pyi
